0.11.0 - in development
-----------------------
 * qbrowse:
    * Fix problem with opening the log for file/directory. (#383192)
 * qinfo:
    * Add a basic help string (#384632)


0.10.0 - 2009-06-02
-----------------------
Maintenance release: log widget with revisions graph used in qannotate, 
and qcommit (to show pending merges); you can search for tags and bugs
in qlog; improvements to show qlog for multiple files or for dir content;
more context menus; various bugfixes.

 * qlog:
    * Added search for tags and bugs.
    * Fixed a bug with qlog FILE where it was not showing revisions if the
      revision that changed the file had been merge into another branch before
      it was merged into the mainline. (Bug #350166)
    * Fixed a bug when clicking refresh with multiple branches open.
      (Bug #351633)
    * When viewing a remote branch, qlog will load the revisions from local
      current directory if availible.
    * Improvements to the graph layout.
    * When opening diffs, there is less of a delay.
    * When running qlog DIR, revisions that change the children of the directory
      are also displayed. This only works if you are using bzr 1.14.
      (Bug #314528)
    * When runing qlog FILE1 FILE2 or qlog DIR, changes to the specified files are
      displayed in bold. By default diff will show changes only to selected
      items. Full diff could be invoked via context menu.
    * Add context menu to file list.
 * qannotate:
    * Use the log widget to display the revision list with a folding graph. The
      graph can be disabled by using the --no-graph command line argument.
      (Bug #328595)
    * Fixed a bug where qannotate crashes if you scroll to the bottom of the
      file and the file's last line is blank. (Bug #340956)
    * Add option to the log context menu to select a revision to annotate.
 * qcommit:
    * Use the log widget to display the pending merges list with a folding
      graph. (Bug #328592)
 * qdiff: